# Sholudko

./: main.py
attendance_records/: .gitignore  README.md  pyproject.toml
attendance_records/scr/project/: create_database.py  main.py  people.db
attendance_records/source/attendance_records/: create_database.py  main.py  people.db
attendance_records/tests/: test_main.py
